refactor: reports module add sockets client to server module

--- a/server/loading.html
+++ b/server/loading.html
@@ -25,6 +25,8 @@
       .icon {
         width: 150px;
         height: 150px;
+        pointer-events: none;
+        user-select: none;
       }
     </style>
     <script src="assets/js/lottie-player.js"></script>
